Remove some duplication in the templates.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
 <html>
-    <head>
-    <title>Tarot for the day</title>	
-      <link rel="stylesheet" type="text/css" href="css/reset-min.css">	  
-      <link rel="stylesheet" type="text/css" href="css/styles.css">	  	  	  
-    </head>
-
+  <% render "_header.html" %>
 	<body>
 
 	  <div id="wrapper">	
@@ -58,11 +53,7 @@
 	    <!-- content -->
 	    </div>
 	  
-        <div id="footer">
-          <p>
-          No Copyright here. Use it as you like, but if it breaks, don't blame me.	
-		  </p>
-        </div>				  
+      <% render "_footer.html" %>  
 	  
 	  <!-- wrapper -->  
 	  </div>  
