--- a/templates/tarot.html
+++ b/templates/tarot.html
@@ -1,6 +1,7 @@
 <html>
 	<!-- This dynamic page is using Ratpack and Groovy templates to a random Tarot Card -->
     <% render "_header.html" %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
 
 	<body>
 	
