--- a/templates/tarot.html
+++ b/templates/tarot.html
@@ -2,6 +2,7 @@
 	<!-- This dynamic page is using Ratpack and Groovy templates to a random Tarot Card -->
     <% render "_header.html" %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
+    </script>
 
 	<body>
 	
